# claude-skills

./: .gitignore  README.md
chapter1-doc-automation/: SKILL.md
chapter1-doc-automation/samples/: weekly_sales.csv
chapter1-doc-automation/scripts/: analyze_data.py  create_brand_template.py  generate_email.py  generate_report.py  requirements.txt
chapter2-content-research/: SKILL.md
chapter2-content-research/scripts/: requirements.txt  setup_wizard.py
chapter3-content-repurpose/examples/: example-usage.md
chapter4-generate-shorts/: SKILL.md  reference.md
chapter4-generate-shorts/output/: highlights.json
chapter4-generate-shorts/scripts/: generate_shorts.py  select_highlights.py  setup.sh
chapter5-narration-video/: .env.example  reference.md
chapter5-narration-video/mcp_server/: pyproject.toml
chapter5-narration-video/mcp_server/src/gemini_proxy_mcp/: __init__.py  server.py
chapter5-narration-video/output/: segments.json
chapter5-narration-video/scripts/: generate_images.py  generate_subtitles.py  run_pipeline.py
chapter5-narration-video/templates/: config.yaml
chapter6-data-collector/: SKILL.md
chapter6-data-collector/domain_profiles/: beauty.yaml  finance.yaml  food.yaml  tech.yaml
chapter6-data-collector/scripts/: requirements.txt  (+2 more)
content-repurpose/: README.md  SKILL.md  book-chapter.md  repurpose.md
content-research-skill/: README.md  book-chapter-draft.md
data-collector/: config.yaml
date-harvest/: data-collector-skill-prompt.md
doc-automation/: README.md  book-chapter-doc-automation.md
narration-video/: SETUP.md  SKILL.md
(+35 files in other folders)
