[project]
name = "gemini-proxy-mcp"
version = "1.0.0"
description = "Gemini API proxy MCP server for narration-video skill"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gemini-proxy-mcp = "gemini_proxy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_proxy_mcp"]
